--- a/source/_navbar.html.erb
+++ b/source/_navbar.html.erb
@@ -16,10 +16,10 @@
     </form>
 
     <!-- Text link -->
-    <a href="https://www.lewagon.com" class="navbar-wagon-item navbar-wagon-link">Wagon</a>
+    <%= link_to "Wagon", "https://www.lewagon.com", class: "navbar-wagon-item navbar-wagon-link"  %>
 
     <!-- Text link -->
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Team</a>
+    <%= link_to "Team", "team.html", class: "navbar-wagon-item navbar-wagon-link"  %>
 
     <!-- Notification link-->
     <a href="" class="navbar-wagon-item navbar-wagon-link">
@@ -34,9 +34,9 @@
       <div class="dropdown">
         <img src="https://placehold.it/50x50" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown">
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">Profile</a></li>
-          <li><a href="#">Dashboard</a></li>
-          <li><a href="#">Log Out</a></li>
+          <li><%= link_to "Profile", "#" %></li>
+          <li><%= link_to "Dashboard", "#" %></li>
+          <li><%= link_to "Log Out", "#" %></li>
         </ul>
       </div>
     </div>
