--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -24,13 +24,14 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #D23333;
+$brand-color: #C9C9C9;
 
 $red: #EE5F5B;
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
+$red_back: #D23333;
 
 // Gray scale
 $gray-darker:  lighten(#000, 13.5%); // #222
